@@ -1,3 +1,7 @@
+2007-09-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-spu.c (elf_howto_table): Formatting.
+
 2007-09-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/4986
